--- a/templates/banner.html
+++ b/templates/banner.html
@@ -5,11 +5,11 @@
             <td>
                 <h2>{{config.title}}</h2>
                 <b>Save the date</b>
-                17. – 18. Oktober 2025
+                {{ trans(key="event_date", lang=lang) }}
             </td>
         </tr>
         <tr>
-            <td>Von der Community, für die Community</td>
+            <td>{{ trans(key="banner_subtitle", lang=lang) }}</td>
         </tr>
     </table>
 
